Bug 463344 - Spectacle no longer quits after taking rectangle screenshot through shortcut
Summary: Spectacle no longer quits after taking rectangle screenshot through shortcut
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords: regression
: 465532 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-12-22 15:42 UTC by Kai Uwe Broulik
Modified: 2023-03-13 14:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2022-12-22 15:42:59 UTC
SUMMARY
Spectacle process no longer quits after taking a screenshot through shortcut. This is annoying because the next time I take a screenshot it will remember the selection rectangle.

STEPS TO REPRODUCE
1. spectacle -br
2. Take screenshot
3. Dismiss notification

OBSERVED RESULT
Spectacle process keeps running

EXPECTED RESULT
Spectacle process exits

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: git master as of 2022-12-22
Comment 1 Nate Graham 2023-01-06 18:59:14 UTC
Can confirm.
Comment 2 Bug Janitor Service 2023-02-10 21:56:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/198
Comment 3 Noah Davis 2023-02-14 15:32:10 UTC
Git commit 670dcd88a30e03874851aeb8dcab1029b544f320 by Noah Davis.
Committed on 14/02/2023 at 15:30.
Pushed by ndavis into branch 'master'.

Set quit on last window closed when creating a GUI

M  +4    -0    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/670dcd88a30e03874851aeb8dcab1029b544f320
Comment 4 Nate Graham 2023-02-14 17:21:17 UTC
*** Bug 465532 has been marked as a duplicate of this bug. ***
Comment 5 Oded Arbel 2023-03-12 08:28:47 UTC
After the fix, Spectactle does indeed close immediately (and is available to be restarted) after completing a screenshot-from-shortcut by pressing ENTER (or ESC).

If, on the other hand, I have checked the option "Quit after a manual save or copy", and I dismiss the screenshotting UI by pressing the "Copy" or "Save" buttons (or the appropriate keyboard shortcuts), Spectactle does not quit immediately and keeps running for ~20 seconds - which in turn prevents invoking it again with the shortcut (as reported in bug 465532).
Comment 6 Nate Graham 2023-03-13 14:35:40 UTC
That's also fixed for the 23.04 release.