Set quit on last window closed when creating a GUI

BUG: 463344